Publicaciones corrupcion entidades

--- a/views/mediostodo.ejs
+++ b/views/mediostodo.ejs
@@ -193,13 +193,8 @@
                             </tbody>
                         </table>
 
-                        <div class="col-lg-6">
-                                <h2 id="count-casos-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-casos-1"></p>
-                        </div>
-                        <div class="col-lg-6">
-                                <h2 id="count-casos-2" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-casos-2"><i></i></p>
+                        <div class="col-lg-12">
+                            <canvas id="casos-corrupcion"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -230,13 +225,8 @@
                             </tbody>
                         </table>
 
-                        <div class="col-lg-6">
-                                <h2 id="count-lideres-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-lideres-1"></p>
-                        </div>
-                        <div class="col-lg-6">
-                                <h2 id="count-lideres-2" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-lideres-2"><i></i></p>
+                        <div class="col-lg-12">
+                            <canvas id="lideres-opinion"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -267,13 +257,8 @@
                             </tbody>
                         </table>
 
-                        <div class="col-lg-6">
-                                <h2 id="count-partidos-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-partidos-1"></p>
-                        </div>
-                        <div class="col-lg-6">
-                                <h2 id="count-partidos-2" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-partidos-2"><i></i></p>
+                        <div class="col-lg-12">
+                            <canvas id="partidos-politicos"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -304,13 +289,8 @@
                             </tbody>
                         </table>
 
-                        <div class="col-lg-6">
-                                <h2 id="count-instituciones-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-instituciones-1"></p>
-                        </div>
-                        <div class="col-lg-6">
-                                <h2 id="count-instituciones-2" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
-                                <p id="describe-count-instituciones-2"><i></i></p>
+                        <div class="col-lg-12">
+                            <canvas id="publicaciones-instituciones"></canvas>
                         </div>
                     </div>
                     <div class="row">
@@ -407,6 +387,9 @@
     sesgoCasos: sesgoCasos,
     sesgoLideres: sesgoLideres,
     sesgoPartidos: sesgoPartidos,
-    sesgoInstituciones: sesgoInstituciones
+    sesgoInstituciones: sesgoInstituciones,
+    sesgoCorrupcionLideres: sesgoCorrupcionLideres,
+    sesgoCorrupcionPartidos: sesgoCorrupcionPartidos,
+    sesgoCorrupcionInstituciones: sesgoCorrupcionInstituciones
 }) %>
 </html>
