Display descripcion outliers sesgo

--- a/views/medios.ejs
+++ b/views/medios.ejs
@@ -266,10 +266,12 @@
                         <div class="col-lg-6">
                                 <h2 id="count-lideres-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-lideres-1"></p>
+                                <p id="describe-corrupcion-count-lideres-1"></p>
                         </div>
                         <div class="col-lg-6">
                                 <h2 id="count-lideres-2" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-lideres-2"><i></i></p>
+                                <p id="describe-corrupcion-count-lideres-2"></p>
                         </div>
                     </div>
                     <div class="row">
@@ -303,10 +305,12 @@
                         <div class="col-lg-6">
                                 <h2 id="count-partidos-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-partidos-1"></p>
+                                <p id="describe-corrupcion-count-partidos-1"></p>
                         </div>
                         <div class="col-lg-6">
                                 <h2 id="count-partidos-2" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-partidos-2"><i></i></p>
+                                <p id="describe-corrupcion-count-partidos-2"></p>
                         </div>
                     </div>
                     <div class="row">
@@ -340,10 +344,12 @@
                         <div class="col-lg-6">
                                 <h2 id="count-instituciones-1" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-instituciones-1"></p>
+                                <p id="describe-corrupcion-count-instituciones-1"></p>
                         </div>
                         <div class="col-lg-6">
                                 <h2 id="count-instituciones-2" class="text-center">0</h2><h4 class="text-center">publicaciones</h4>
                                 <p id="describe-count-instituciones-2"><i></i></p>
+                                <p id="describe-corrupcion-count-instituciones-2"></p>
                         </div>
                     </div>
                     <div class="row">
@@ -437,7 +443,10 @@
     sesgoCasos: sesgoCasos,
     sesgoLideres: sesgoLideres,
     sesgoPartidos: sesgoPartidos,
-    sesgoInstituciones: sesgoInstituciones
+    sesgoInstituciones: sesgoInstituciones,
+    sesgoCorrupcionLideres: sesgoCorrupcionLideres,
+    sesgoCorrupcionPartidos: sesgoCorrupcionPartidos,
+    sesgoCorrupcionInstituciones: sesgoCorrupcionInstituciones
 }) %>
 <%- include('scripts/all-graphs', {
     
