--- a/views/descubre.ejs
+++ b/views/descubre.ejs
@@ -57,7 +57,7 @@
                     <li>
                         <a href="/lideres">
                             <i class="material-icons">group</i>
-                            <p>Líderes</p>
+                            <p>Líderes de opinión</p>
                         </a>
                     </li>
                     <li>
