--- a/views/mediostodo.ejs
+++ b/views/mediostodo.ejs
@@ -52,7 +52,7 @@
                     <li>
                         <a href="/lideres">
                             <i class="material-icons">group</i>
-                            <p>Líderes</p>
+                            <p>Líderes de opinión</p>
                         </a>
                     </li>
                     <li>
@@ -364,14 +364,6 @@
 <script src="/js/demo.js"></script>
 <script type="text/javascript">
     $(document).ready(function() { 
-        // Javascript method's body can be found in assets/js/demos.js
-
-        // TODO: poner años programatically
-        /*labels: ["Enero/16", "Febrero/16", "Marzo/16", "Abril/16", "Mayo/16", "Junio/16", "Julio/16", "Agosto/16", "Septiembre/16", "Octubre/16", "Noviembre/16", "Diciembre/16", "Enero/17", "Febrero/17", "Marzo/17", "Abril/17", "Mayo/17", "Junio/17", "Julio/17", "Agosto/17", "Septiembre/17", "Octubre/17", "Noviembre/17", "Diciembre/17"],*/
-
-
-
-        //window.myLine = new Chart(ctx, config);
 
     });
 </script>
